Fixade ett problem i bokningar där headern overlappade select menyerna.

--- a/Asset/CSS/bokningar.css
+++ b/Asset/CSS/bokningar.css
@@ -9,10 +9,7 @@ header{
   justify-content: space-between;
   align-items: center;
   background-color:white;
-  position:absolute;
-  top:0;
   width:100%;
-  z-index: 1;
   margin-bottom: 20px;
 }
 header a {
@@ -57,12 +54,11 @@ body {
   background-image: url('https://highspringsplayhouse.com/wp-content/uploads/2016/01/red-curtains.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
   color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+
 
 }
 
